--- a/.github/workflows/module_v0_11_23.yml
+++ b/.github/workflows/module_v0_11_23.yml
@@ -160,16 +160,23 @@ jobs:
           TF_VAR_f5xc_api_credential_password: ${{ secrets.F5XC_API_CREDENTIAL_PASSWORD }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: terraform apply -auto-approve -no-color
+        run: |
+          cd vault
+          terraform apply -auto-approve -no-color
+          cd ..
+          cd ce
+          cp main.tf.example main.tf
+          terraform apply -auto-approve -no-color
         continue-on-error: false
       - name: Cleanup environment
         id: cleanup_env
         run: |
+          cd ce
           rm main.tf
       - run: echo "This job's status is ${{ job.status }}."
   aws-cloud-ce-vault-module-reapply:
     runs-on: ubuntu-latest
-    needs: [ aws-cloud-ce-vault-module-apply ]
+    needs: [aws-cloud-ce-vault-module-apply]
     steps:
       - run: echo "The job was automatically triggered by a ${{github.event_name}} event."
       - run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub."
@@ -220,11 +227,18 @@ jobs:
             TF_VAR_f5xc_api_credential_password: ${{ secrets.F5XC_API_CREDENTIAL_PASSWORD }}
             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: terraform apply -auto-approve -no-color
+        run: |
+          cd vault
+          terraform apply -auto-approve -no-color
+          cd ..
+          cd ce
+          cp main.tf.example main.tf
+          terraform apply -auto-approve -no-color
         continue-on-error: false
       - name: Cleanup environment
         id: cleanup_env
         run: |
+          cd ce
           rm main.tf
       - run: echo "This job's status is ${{ job.status }}."
   aws-cloud-ce-vault-module-destroy:
@@ -280,10 +294,17 @@ jobs:
           TF_VAR_f5xc_api_credential_password: ${{ secrets.F5XC_API_CREDENTIAL_PASSWORD }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: terraform destroy -auto-approve -no-color
+        run: |
+          cd vault
+          terraform destroy -auto-approve -no-color
+          cd ..
+          cd ce
+          cp main.tf.example main.tf
+          terraform destroy -auto-approve -no-color
         continue-on-error: false
       - name: Cleanup environment
         id: cleanup_env
         run: |
+          cd ce
           rm main.tf
       - run: echo "This job's status is ${{ job.status }}."
