--- a/.github/workflows/module_v0_11_23.yml
+++ b/.github/workflows/module_v0_11_23.yml
@@ -99,16 +99,17 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          cd vault
+          cd ${{ github.workspace }}/vault
           terraform plan -no-color
-          cd ..
-          cd ce
+          cd /
+          cd ${{ github.workspace }}/ce
           cp main.tf.example main.tf
           terraform plan -no-color
         continue-on-error: false
       - name: Cleanup environment
         id: cleanup_env
         run: |
+          cd ${{ github.workspace }}/ce
           rm main.tf
       - run: echo "This job's status is ${{ job.status }}."
   aws-cloud-ce-vault-module-apply:
@@ -161,17 +162,17 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          cd vault
+          cd ${{ github.workspace }}/vault
           terraform apply -auto-approve -no-color
-          cd ..
-          cd ce
+          cd /
+          cd ${{ github.workspace }}/ce
           cp main.tf.example main.tf
           terraform apply -auto-approve -no-color
         continue-on-error: false
       - name: Cleanup environment
         id: cleanup_env
         run: |
-          cd ce
+          cd ${{ github.workspace }}/ce
           rm main.tf
       - run: echo "This job's status is ${{ job.status }}."
   aws-cloud-ce-vault-module-reapply:
@@ -224,17 +225,17 @@ jobs:
             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          cd vault
+          cd ${{ github.workspace }}/vault
           terraform apply -auto-approve -no-color
-          cd ..
-          cd ce
+          cd /
+          cd ${{ github.workspace }}/ce
           cp main.tf.example main.tf
           terraform apply -auto-approve -no-color
         continue-on-error: false
       - name: Cleanup environment
         id: cleanup_env
         run: |
-          cd ce
+          cd ${{ github.workspace }}/ce
           rm main.tf
       - run: echo "This job's status is ${{ job.status }}."
   aws-cloud-ce-vault-module-destroy:
@@ -287,16 +288,16 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          cd vault
+          cd ${{ github.workspace }}/vault
           terraform destroy -auto-approve -no-color
-          cd ..
-          cd ce
+          cd /
+          cd ${{ github.workspace }}/ce
           cp main.tf.example main.tf
           terraform destroy -auto-approve -no-color
         continue-on-error: false
       - name: Cleanup environment
         id: cleanup_env
         run: |
-          cd ce
+          cd ${{ github.workspace }}/ce
           rm main.tf
       - run: echo "This job's status is ${{ job.status }}."
