--- a/.github/workflows/module_v0_11_23.yml
+++ b/.github/workflows/module_v0_11_23.yml
@@ -107,6 +107,8 @@ jobs:
           TF_VAR_f5xc_api_credential_password: ${{ secrets.F5XC_API_CREDENTIAL_PASSWORD }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          TF_VAR_aws_access_key_id: ${{ secrets. }}
+          TF_VAR_aws_secret_access_key: ${{ secrets. }}
         run: |
           cd ${{ github.workspace }}/vault
           terraform plan -no-color
@@ -174,6 +176,8 @@ jobs:
           TF_VAR_f5xc_api_credential_password: ${{ secrets.F5XC_API_CREDENTIAL_PASSWORD }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          TF_VAR_aws_access_key_id: ${{ secrets. }}
+          TF_VAR_aws_secret_access_key: ${{ secrets. }}
         run: |
           cd ${{ github.workspace }}/vault
           terraform apply -auto-approve -no-color
@@ -241,6 +245,8 @@ jobs:
             TF_VAR_f5xc_api_credential_password: ${{ secrets.F5XC_API_CREDENTIAL_PASSWORD }}
             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            TF_VAR_aws_access_key_id: ${{ secrets. }}
+            TF_VAR_aws_secret_access_key: ${{ secrets. }}
         run: |
           cd ${{ github.workspace }}/vault
           terraform apply -auto-approve -no-color
@@ -308,6 +314,8 @@ jobs:
           TF_VAR_f5xc_api_credential_password: ${{ secrets.F5XC_API_CREDENTIAL_PASSWORD }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          TF_VAR_aws_access_key_id: ${{ secrets. }}
+          TF_VAR_aws_secret_access_key: ${{ secrets. }}
         run: |
           cd ${{ github.workspace }}/vault
           terraform destroy -auto-approve -no-color
