--- a/.github/workflows/module_v0_11_23.yml
+++ b/.github/workflows/module_v0_11_23.yml
@@ -191,6 +191,8 @@ jobs:
         run: |
           cd ${{ github.workspace }}/ec2
           terraform apply -auto-approve -no-color
+          echo "VAULT_ADDR=$(terraform output -json | jq -r '.ssh_host.value.ssh_host')" >> $GITHUB_ENV
+          echo ${{ env.VAULT_ADDR }}
           cd ${{ github.workspace }}/vault
           terraform apply -auto-approve -no-color
           cd ${{ github.workspace }}/ce
@@ -264,6 +266,8 @@ jobs:
         run: |
           cd ${{ github.workspace }}/ec2
           terraform apply -auto-approve -no-color
+          echo "VAULT_ADDR=$(terraform output -json | jq -r '.ssh_host.value.ssh_host')" >> $GITHUB_ENV
+          echo ${{ env.VAULT_ADDR }}
           cd ${{ github.workspace }}/vault
           terraform apply -auto-approve -no-color
           cd ${{ github.workspace }}/ce
@@ -337,6 +341,8 @@ jobs:
         run: |
           cd ${{ github.workspace }}/ec2
           terraform destroy -auto-approve -no-color
+          echo "VAULT_ADDR=$(terraform output -json | jq -r '.ssh_host.value.ssh_host')" >> $GITHUB_ENV
+          echo ${{ env.VAULT_ADDR }}
           cd ${{ github.workspace }}/vault
           terraform destroy -auto-approve -no-color
           cd ${{ github.workspace }}/ce
