--- a/.github/workflows/module_v0_11_23.yml
+++ b/.github/workflows/module_v0_11_23.yml
@@ -119,6 +119,7 @@ jobs:
           TF_VAR_ssh_public_key_file_absolute: ${{ secrets.SSH_PUBLIC_KEY_FILE_ABSOLUTE }}
           TF_VAR_aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           TF_VAR_aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          TF_VAR_root_path: ${{ github.workspace }}
         run: |
           cd ${{ github.workspace }}/ec2
           terraform plan -no-color
@@ -196,6 +197,7 @@ jobs:
           TF_VAR_ssh_public_key_file_absolute: ${{ secrets.SSH_PUBLIC_KEY_FILE_ABSOLUTE }}
           TF_VAR_aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           TF_VAR_aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          TF_VAR_root_path: ${{ github.workspace }}
         run: |
           cd ${{ github.workspace }}/ec2
           terraform apply -auto-approve -no-color
@@ -275,6 +277,7 @@ jobs:
             TF_VAR_ssh_public_key_file_absolute: ${{ secrets.SSH_PUBLIC_KEY_FILE_ABSOLUTE }}
             TF_VAR_aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
             TF_VAR_aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            TF_VAR_root_path: ${{ github.workspace }}
         run: |
           cd ${{ github.workspace }}/ec2
           terraform apply -auto-approve -no-color
@@ -354,6 +357,7 @@ jobs:
           TF_VAR_ssh_public_key_file_absolute: ${{ secrets.SSH_PUBLIC_KEY_FILE_ABSOLUTE }}
           TF_VAR_aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           TF_VAR_aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          TF_VAR_root_path: ${{ github.workspace }}
         run: |
           cd ${{ github.workspace }}/ec2
           terraform destroy -auto-approve -no-color
