--- a/ce/main.tf.example
+++ b/ce/main.tf.example
@@ -57,7 +57,11 @@ variable "owner" {
   default = "c.klewar@f5.com"
 }
 
-variable "ssh_public_key_file" {
+variable "root_path" {
+  type = string
+}
+
+variable "ssh_public_key_file_absolute" {
   type = string
 }
 
@@ -129,7 +133,7 @@ module "f5xc_aws_cloud_ce_single_node_single_nic_new_vpc_new_subnet" {
   aws_vpc_cidr_block                   = "192.168.0.0/20"
   aws_security_group_rules_slo_egress  = []
   aws_security_group_rules_slo_ingress = []
-  ssh_public_key                       = file(var.ssh_public_key_file)
+  ssh_public_key                       = file(format("%s/%s", var.root_path, var.ssh_public_key_file_absolute))
   providers                            = {
     aws      = aws.default
     volterra = volterra.default
