--- a/.github/workflows/module_v0_11_23.yml
+++ b/.github/workflows/module_v0_11_23.yml
@@ -199,7 +199,7 @@ jobs:
         run: |
           cd ${{ github.workspace }}/ec2
           terraform apply -auto-approve -no-color
-          HOST_ADDR=$(terraform output -json | jq -r \'.ssh_host.value\')
+          HOST_ADDR=$(terraform output -json | jq -r '.ssh_host.value')
           echo "VAULT_ADDR=http://$HOST_ADDR:8200" >> $GITHUB_ENV
           echo "VAULT_TOKEN=${{ secrets.HASHICORP_VAULT_TOKEN }} >> $GITHUB_ENV
         continue-on-error: false
