--- a/.github/workflows/module_v0_11_23.yml
+++ b/.github/workflows/module_v0_11_23.yml
@@ -202,6 +202,7 @@ jobs:
           echo "VAULT_ADDR=http://$(terraform output -json | jq -r '.ssh_host.value'):8200" >> "$GITHUB_ENV"
           echo "VAULT_TOKEN=${{ secrets.HASHICORP_VAULT_TOKEN }}" >> "$GITHUB_ENV"
           echo "VAULT_ADDR: ${{ env.VAULT_ADDR }}"
+          echo  ${{ env }}"
         continue-on-error: false
       - name: Terraform Apply Vault
         id: apply_vault
